# RubicJellyfish

./: README.md
identify/img_displayer/: CMakeLists.txt  package.xml
identify/img_displayer/src/: img_displayer.cpp
identify/recognize/: CMakeLists.txt  package.xml
identify/recognize/include/recognize/: image_processing.h  image_recognization.h  matchTemplate.h  yolov5.h  yolox.h
identify/recognize/launch/: MV_cam.launch
identify/recognize/msg/: image.msg
identify/recognize/src/: image_processing.cpp  image_recognization.cpp  matchTemplate.cpp  recognize.cpp  yolov5.cpp  yolox.cpp
identify/recognize/src/DigitalRecognition/: .gitignore  CMakeLists.txt  InferResult.cpp  InferResult.h  README.md  benchmark.cpp  common.h  func.cmake  infer.h  path.cmake
identify/recognize/src/DigitalRecognition/model/: update_model.sh
identify/recognize/src/DigitalRecognition/openvino/: modelManager.cpp  modelManager.h
identify/recognize/src/DigitalRecognition/rknn/: modelManager.cpp  modelManager.h
identify/recognize/src/DigitalRecognition/templateMatch/: modelManager.cpp  modelManager.h
identify/recognize/src/DigitalRecognition/tensorrt/: inferRequest.cpp  inferRequest.h  modelManager.cpp  modelManager.h  preprocess.cu  preprocess.h
identify/robot_serial/: CMakeLists.txt  package.xml
identify/robot_serial/launch/: robot_serial.launch
identify/robot_serial/src/: main.cpp
identify/serial_common/: CMakeLists.txt  package.xml
identify/serial_common/include/: armor_processor.h  serial_common.h
identify/serial_common/msg/: Guard.msg  Infantry.msg  RobotHP.msg  gimbalPRY.msg  serialWrite.msg
identify/serial_common/src/: armor_processor.cpp  main.cpp  serial_common.cpp
realflight_modules/mv_driver/: CMakeLists.txt
realflight_modules/mv_driver/src/: mv_driver.cpp
realflight_modules/realsense-ros/realsense2_camera/launch/: rs_camera.launch  rs_t265.launch
realflight_modules/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp
realflight_modules/robot_serial/src/: main.cpp
realflight_modules/serial_common/: CMakeLists.txt  package.xml  serialProtocol.txt
realflight_modules/serial_common/include/: serial_common.h
realflight_modules/serial_common/msg/: gimbal.msg  plot_test.msg
realflight_modules/serial_common/src/: main.cpp  serial_common.cpp
ros_astra_camera/launch/: dabai_u3.launch  gemini.launch  multi_dabai.launch
scheduler/: CMakeLists.txt  package.xml
scheduler/cfg/: fly_params.yaml
scheduler/include/scheduler/: Drone.h  Task.h  TaskManager.h
scheduler/launch/: t265_flight.launch
scheduler/msg/: pose_mode.msg  t265pose.msg  velocity_mode.msg
scheduler/src/: Drone.cpp  Task.cpp  TaskManager.cpp  main.cpp
ui/: CMakeLists.txt  mainpage.dox  package.xml
ui/include/ui/: main_window.hpp  qnode.hpp  rotation_recongnition.hpp
ui/launch/: identify.launch  identify_v5.launch  measure.launch
ui/src/: main.cpp  main_window.cpp  qnode.cpp  rotation_recongnition.cpp  step.txt
ui/ui/: main_window.ui
utils/rviz_plugins/: CMakeLists.txt
