<?xml version="1.0"?>
<package>
  <name>ui</name>
  <version>0.1.0</version>
  <description>

     2020RC NUAA Alchemist ui

  </description>
  <maintainer email="zuoqingyu@nuaa.edu.cn">Bismarck</maintainer>
  <author>Bismarck</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>mv_driver</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>neural_net</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>mv_driver</run_depend>
  <run_depend>neural_net</run_depend>
</package>
